kubernetes_app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-editor-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 'production-p5-web-editor-ip'
spec:
  defaultBackend:
    service:
      name: web-editor-node
      port:
        number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preview-editor-ingress
  namespace: production
  annotations:
    # need to make another global static ip
    kubernetes.io/ingress.global-static-ip-name: 'production-p5-preview-editor-ip'
spec:
  defaultBackend:
    service:
      name: web-editor-node
      port:
        number: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: web-editor-node
  namespace: production
  labels:
    app: web-editor
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  type: NodePort
  ports:
    - port: 8000
      name: editor-port
      targetPort: 8000
    - port: 8002
      name: preview-port
      targetPort: 8002
  selector:
    app: web-editor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-editor-node
  namespace: production
spec:
  selector:
    matchLabels:
      app: web-editor
  replicas: 4
  template:
    metadata:
      labels:
        app: web-editor
    spec:
      containers:
        - name: web-editor-app
          image: index.docker.io/catarak/p5.js-web-editor:latest
          # temp, just to test kubernetes
          # envFrom:
          # - configMapRef:
          #     name: web-editor-env
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-editor-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 'staging-p5-web-editor-ip'
spec:
  defaultBackend:
    service:
      name: web-editor-node
      port:
        number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preview-editor-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 'staging-p5-preview-editor-ip'
spec:
  defaultBackend:
    service:
      name: web-editor-node
      port:
        number: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: web-editor-node
  namespace: staging
  labels:
    app: web-editor
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  type: NodePort
  ports:
    - port: 8001
      name: editor-port
      targetPort: 8000
    - port: 8003
      name: preview-port
      targetPort: 8002
  selector:
    app: web-editor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-editor-node
  namespace: staging
spec:
  selector:
    matchLabels:
      app: web-editor
  replicas: 1
  template:
    metadata:
      labels:
        app: web-editor
    spec:
      containers:
        - name: web-editor-app
          image: index.docker.io/catarak/p5.js-web-editor-staging:latest
          # temp, just to test kubernetes
          # envFrom:
          # - configMapRef:
          #     name: web-editor-env
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
